✨ feat: modernize project structure and tooling
- Add comprehensive TOOLS.md documentation
- Create sketch.yaml for Arduino CLI integration
- Rename main.ino to match project name
- Replace README.md with enhanced documentation
- Add Cursor IDE rules for development standards
- Integrate esptool.py for optimized ESP32-C6 flashing
- Remove deprecated CI configuration files
- Update scripts with English documentation
- Improve Makefile with better error handling
- Consolidate build configuration in sketch.yaml

Breaking changes:
- Remove ci.json (replaced by sketch.yaml)
- Remove flash.cmd Windows script
- Remove scripts/README.md (consolidated in TOOLS.md)

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,92 @@
-# Created by https://www.toptal.com/developers/gitignore/api/platformio
-# Edit at https://www.toptal.com/developers/gitignore?templates=platformio
+# ===============================================
+# .gitignore para ESP32-C6 HumiTempSensor
+# ===============================================
 
-### PlatformIO ###
-.pioenvs
-.piolibdeps
-.clang_complete
-.gcc-flags.json
-.pio
+# Directorios de build y compilación
+build/
+bin/
+dist/
+out/
 
-# End of https://www.toptal.com/developers/gitignore/api/platformio
+# Cache de Arduino CLI
+.arduino15/
+.arduino/
+arduino_cache/
 
+# Archivos de configuración local
+.env
+.env.local
+.env.*.local
 
-.DS_Store
-bin/*/
-*build-*
-*build*
+# Logs
+*.log
+logs/
+
+# Archivos temporales
+*.tmp
+*.temp
 *~
-build-tmp/
-doc/
-debug.txt
-.ycm_extra_conf.pyc
-.ropeproject
+.DS_Store
+Thumbs.db
+
+# Archivos de backup
+*.bak
+*.swp
+*.swo
+*~
+
+# Archivos específicos de IDE
+.vscode/
+.idea/
+*.code-workspace
+.history/
+.vs/
+
+# Node.js (si se usa para herramientas)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+dist/
+build/
+
+# Archivos de sistema
+.Trash-*
+.nfs*
+Desktop.ini
+ehthumbs.db
+Thumbs.db
+
+# Archivos de coverage y testing
+coverage/
+*.coverage
+.nyc_output
+.coverage.*
+
+# Directorios de dependencias
+vendor/
+packages/
+
+# Archivos de configuración específicos del usuario
+config.local.*
+secrets.*
+
+# Archivos de certificados y claves
+*.key
+*.pem
+*.crt
+*.p12
+
+# Archivos comprimidos
+*.zip
+*.tar.gz
+*.rar
+*.7z
